--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       that meet the evolving needs of clients and users alike.
                 </p>
                 <div class="btn-con">
-                    <a href="img/CV.pdf" class="main-btn">
+                    <a href="img/Peter Ochieng.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
