--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/PeterOOmondi/egerton_freemarket_frontend/tree/main" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://egerton-freemarket.vercel.app/" class="icon">
                                 <i class="fab fa-chrome"></i>
                             </a>
                             </a>
