--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3> Egerton Freemarket </h3>
                         <div class="icons">
                             <a href="https://github.com/PeterOOmondi/egerton_freemarket_frontend/tree/main" class="icon">
                                 <i class="fab fa-github"></i>
