Added the links to the images in the blogs section
Instead of having to click the link in order to get to the blogs, one can now just simply click on the images.

--- a/index.html
+++ b/index.html
@@ -395,7 +395,9 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/getting-started-with-frontend-development-a-beginners-guide-498c47a42470">
+                            <img src="img/port6.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/getting-started-with-frontend-development-a-beginners-guide-498c47a42470"> 
@@ -421,7 +423,9 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/building-responsive-websites-best-practices-112885e97f61">
+                            <img src="img/blog2.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/building-responsive-websites-best-practices-112885e97f61">
@@ -434,7 +438,9 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/enhanced-user-experience-with-micro-interactions-070207cd07b6">
+                            <img src="img/blog3.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/enhanced-user-experience-with-micro-interactions-070207cd07b6">
@@ -448,7 +454,9 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port1.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/state-management-in-react-an-introduction-to-redux-b25e40476160">
+                            <img src="img/port1.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/state-management-in-react-an-introduction-to-redux-b25e40476160">
@@ -461,7 +469,9 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port3.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/optimizing-frontend-performance-tips-and-tricks-01189b70606c">
+                            <img src="img/port3.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/optimizing-frontend-performance-tips-and-tricks-01189b70606c">
