--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
+                        <a href="https://medium.com/@peterochieng008/understanding-the-box-model-in-css-ad4f681d4a90">
+                            <img src="img/blog1.jpg" alt="">
+                        </a>
                         <div class="blog-text">
                             <h4>
                                 <a href="https://medium.com/@peterochieng008/understanding-the-box-model-in-css-ad4f681d4a90">
