--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                          emotional levels.
                     </p>
                     <div class="btn-con">
-                        <a href="img/CV.pdf" class="main-btn">
+                        <a href="img/PETER OCHIENG OMONDI - CV.pdf" class="main-btn">
                             <span class="btn-text">Download My CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
